# financial-copilot

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: inventory.py
backend/app/prompts/: audio_prompts.py  extraction_prompt.py
backend/app/routes/: inventory.py  transactions.py
backend/app/services/: inventory_service.py
backend/app/services/audio/: stt_service.py  tts_service.py
backend/app/services/llm/: __init__.py  base.py  gemini_client.py  groq_client.py  orchestrator.py
backend/app/workflows/: audio_entry.py  base.py  image_entry.py  manual_entry.py
backend/tests/: audio_entry_test.py  image_entry_test.py  manual_entry_test.py  working.ipynb
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.js  page.js  page.module.css
frontend/src/app/(app)/: layout.js
frontend/src/app/(app)/analytics/: page.js  page.module.css
frontend/src/app/(app)/chatbot/: page.js  page.module.css
frontend/src/app/(app)/dashboard/: page.js  page.module.css
frontend/src/app/(app)/goals/: page.js  page.module.css
frontend/src/app/(app)/inventory/: page.js  page.module.css
frontend/src/app/(app)/predictions/: page.js  page.module.css
frontend/src/app/(app)/settings/: page.js  page.module.css
frontend/src/app/entry/image/: page.js  page.module.css
frontend/src/app/entry/manual/: page.js  page.module.css
frontend/src/components/: BottomNav.js  BottomNav.module.css  Toast.js  TopNav.js
frontend/src/lib/: api.js  constants.js
(+4 files in other folders)
